[maven-release-plugin] prepare for next development iteration

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>com.jamesward</groupId>
         <artifactId>multi</artifactId>
-        <version>1.7</version>
+        <version>1.8-SNAPSHOT</version>
     </parent>
 
     <artifactId>core</artifactId>
     <name>core</name>
-    <version>1.7</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <dependencies>
